--- a/portfolio/portfolioAesthetic.css
+++ b/portfolio/portfolioAesthetic.css
@@ -54,14 +54,28 @@ body{
 }
 
 .sampleWork{
-  text-align: center;
   margin-top: 10vh;
+  margin-right: 5vw;
   margin-bottom: 10vh;
-  margin-left: 10vw;
-  width: 80vw;
-  height: 80vh;
-  background: black;
+  margin-left: 5vw;
+  width: 90vw;
+  height: 800px;
+  /* text-align: center; */
+  background: white;
   /* opacity: 0.75; */
+}
+
+.sampleWork img{
+  text-align: center;
+  float:left;
+  padding-bottom: 60px;
+  padding-left: 60px;
+  width: 25vw;
+  height: 25vw;
+}
+
+.sampleWork img:hover{
+  opacity:0.6;
 }
 
 .aboutMeHomePage{
@@ -89,15 +103,8 @@ body{
 }
 
 .contactMeHomepage p{
-  width: 25vw;
-  height: 25vw;
-  float: left;
   text-align: center;
-  font-family: Helvetica, Helvetica, Arial, sans-serif;
-  font-size: 20px;
-  padding-top: 40px;
   color: white;
-  opacity: 0.6;
 }
 
 /* photography page */
