--- a/portfolio/portfolioAesthetic.css
+++ b/portfolio/portfolioAesthetic.css
@@ -123,9 +123,11 @@ body{
 
 .content{
   width: 100vw;
-  height: 90vh;
+  height: 1000px;
   background: white;
-  margin-bottom: 8vw;
+  margin-right: 100px;
+  margin-bottom: 4vw;
+  text-align: center;
 }
 
 .contentImagePlacement{
@@ -153,15 +155,167 @@ body{
   margin-left: 8vw; */
 }
 
+#biggerImg{
+  border-radius: 5px;
+  cursor:pointer;
+  transition: 0.3s;
+}
+
+#biggerImg:hover{
+  opacity: 0.7;
+}
+
+#biggerImg2{
+  border-radius: 5px;
+  cursor:pointer;
+  transition: 0.3s;
+}
+
+#biggerImg2:hover{
+  opacity: 0.7;
+}
+
+#biggerImg3{
+  border-radius: 5px;
+  cursor:pointer;
+  transition: 0.3s;
+}
+
+#biggerImg3:hover{
+  opacity: 0.7;
+}
+
+#biggerImg4{
+  border-radius: 5px;
+  cursor:pointer;
+  transition: 0.3s;
+}
+
+#biggerImg4:hover{
+  opacity: 0.7;
+}
+
+#biggerImg5{
+  border-radius: 5px;
+  cursor:pointer;
+  transition: 0.3s;
+}
+
+#biggerImg5:hover{
+  opacity: 0.7;
+}
+
+#biggerImg6{
+  border-radius: 5px;
+  cursor:pointer;
+  transition: 0.3s;
+}
+
+#biggerImg6:hover{
+  opacity: 0.7;
+}
+
+#biggerImg7{
+  border-radius: 5px;
+  cursor:pointer;
+  transition: 0.3s;
+}
+
+#biggerImg7:hover{
+  opacity: 0.7;
+}
+
+#biggerImg8{
+  border-radius: 5px;
+  cursor:pointer;
+  transition: 0.3s;
+}
+
+#biggerImg8:hover{
+  opacity: 0.7;
+}
+
+#biggerImg9{
+  border-radius: 5px;
+  cursor:pointer;
+  transition: 0.3s;
+}
+
+#biggerImg9:hover{
+  opacity: 0.7;
+}
+
+.modal{
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+}
+
+.modal-content{
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+#caption{
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+.modal-content, #caption{
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom{
+  from{transform.scale(0)}
+  to{transform:scale(1)}
+}
+
+.close{
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover
+.close:focus{
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 700px){
+  .modal-content{
+    width:100%;
+  }
+}
+
 .contentImagePlacement:hover{
   opacity: 0.8;
 }
 
 .next{
-  width: 100vw;
-  height: 30vh;
-  background: white;
-  margin-top: 4vw;
+  margin-top: 1vw;
   margin-bottom: 4vw;
 }
 .next p{
@@ -170,7 +324,7 @@ body{
   font-size: 40px;
   padding-top: 20px;
   margin-left: 8vw;
-  color: black;
+  color: white;
   opacity: 0.6;
 }
 
@@ -180,6 +334,7 @@ body{
 
 .infographic{
   text-align: center;
+  margin-bottom: 50px;
   width: 100vw;
   height: 60vh;
   background:white;
