--- a/portfolio/portfolioAesthetic.css
+++ b/portfolio/portfolioAesthetic.css
@@ -10,29 +10,30 @@ body{
 }
 
 .background{
-  z-index: -3;
+  z-index: -5;
 }
 
 .background img{
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100vh;
   /* filter: blur(5px); */
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 .header{
   text-align: center;
   z-index: -3;
   position: absolute;
-  margin-left: 28vw;
+  margin-left: 23vw;
+  margin-bottom: 8vw;
   /* margin-top: 0px; */
   /* text-align: center; */
 }
 
 .header img{
   text-align: center;
-  width: 650px;
+  width: 700px;
   height: 400px;
   opacity: 0.6;
 }
@@ -82,6 +83,7 @@ body{
   height: 800px;
   /* text-align: center; */
   background: white;
+  positin: relative;
   /* opacity: 0.75; */
 }
 
@@ -92,6 +94,7 @@ body{
   padding-left: 60px;
   width: 25vw;
   height: 25vw;
+  z-index: 3;
 }
 
 .sampleWork img:hover{
@@ -143,6 +146,7 @@ body{
   text-align: center;
   font-size: 80px;
   color: black;
+  margin-top: 160px;
 }
 
 .content{
@@ -178,8 +182,8 @@ body{
 .contentImagePlacement img{
   float: left;
   text-align: center;
-  width: 20vw;
-  height: 20vw;
+  width: 20%;
+  /* height: 20vw; */
   /* margin-top: 8vw;
   margin-right: 4vw;
   margin-left: 8vw; */
