--- a/portfolio/tester.css
+++ b/portfolio/tester.css
@@ -1,11 +1,13 @@
 body{
-  background-color: #5A5A5A;
+  background-color: #323232;
   margin: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 .mainPageTop{
-  width: 100vw;
-  height: 100vh;
+  width: 1920px;
+  height: 1080px;
 }
 
 .mainPageTop img{
@@ -72,4 +74,182 @@ body{
 .downwardArrow img{
   width: 80px;
   height: 70px;
+}
+
+.pageTopText{
+  /* text-align: center; */
+  margin-top: 100px;
+
+}
+
+.top{
+  /* position: relative; */
+  text-align: center;
+  text-decoration: none;
+  color: #faaa94;
+  font-family: Playfair Display, serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 80px;
+  /* margin-top: 200px; */
+  /* margin-left: 600px; */
+}
+
+.bottom{
+  /* position: relative; */
+  text-align: center;
+  text-decoration: none;
+  color: #faaa94;
+  font-family: Montserrat, sans-serif;
+  font-size: 70px;
+  font-weight: lighter;
+  line-height: 20px;
+  /* margin-left: 600px; */
+}
+
+.content{
+  /* margin-top: 600px; */
+  width: 100%;
+  height: 90vh;
+}
+
+.contentBox{
+  width: 50%;
+  height: 50%;
+  background-color: #4E4E4E;
+  text-align: left;
+  margin-top: 200px;
+  margin-left: 0px;
+  z-index: 1;
+  position: absolute;
+}
+
+.contentBoxShadow{
+  width: 50%;
+  height: 50%;
+  background-color: black;
+  text-align: left;
+  margin-top: 200px;
+  margin-left: 0px;
+  z-index: 0;
+  position: absolute;
+  filter: blur(5px);
+}
+
+.descriptionBox{
+  width: 400px;
+  height: 300px;
+  background-color: #B2B2B2;
+  position: absolute;
+  margin-top: 475px;
+  /* align-items: center; */
+  margin-left: 540px;
+  z-index: -1;
+}
+
+.descriptionBoxShadow{
+  width: 400px;
+  height: 300px;
+  background-color: black;
+  position: absolute;
+  margin-top: 475px;
+  /* align-items: center; */
+  margin-left: 540px;
+  z-index: -2;
+  filter: blur(5px);
+}
+
+.contentBox2{
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  background-color: #4E4E4E;
+  margin-top: 200px;
+  /* margin-left: 0px; */
+  z-index: 1;
+  /* width: 100%; */
+  display: inline-block;
+  text-align: right;
+  right: 0px;
+}
+
+.contentBoxShadow2{
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  background-color: black;
+  display: inline-block;
+  text-align: right;
+  right: 0px;
+  margin-top: 200px;
+  /* margin-left: 0px; */
+  z-index: 0;
+  filter: blur(5px);
+}
+
+.descriptionBox2{
+  width: 400px;
+  height: 300px;
+  background-color: #B2B2B2;
+  position: absolute;
+  margin-top: 400px;
+  margin-left: 330px;
+  z-index: -1;
+  /* display: block; */
+  text-align: center;
+  margin-top: 475px;
+  /* align-items: center; */
+  margin-left: 540px;
+  /* right: 0px; */
+  /* position: absolute; */
+}
+
+.descriptionBoxShadow2{
+  width: 400px;
+  height: 300px;
+  background-color: black;
+  position: absolute;
+  margin-top: 475px;
+  /* align-items: center; */
+  margin-left: 540px;
+  z-index: -2;
+  filter: blur(5px);
+}
+
+.anotherBox{
+  position: absolute;
+  text-align:center;
+  width: 964px;
+  height: 600px;
+  background-color: black;
+  display: inline-block;
+  /* margin-top: 200px; */
+  margin-left: 17vw;
+  z-index: 1;
+}
+
+.anotherBoxShadow{
+  position: absolute;
+  text-align:center;
+  width: 966px;
+  height: 602px;
+  background-color: black;
+  display: inline-block;
+  /* margin-top: 200px; */
+  margin-left: 17vw;
+  filter: blur(5px);
+  z-index: -1;
+}
+
+.bBoxes{
+  position: relative;
+  margin-top: 200px;
+}
+
+.pageBase{
+  position: relative;
+  width: 100vw;
+  height: 400px;
+  background-color: #B2B2B2;
+  margin-top: 800px;
 }
