--- a/landingPage/landingpage.css
+++ b/landingPage/landingpage.css
@@ -22,12 +22,6 @@ body{
   font-size: 40px
 }
 
-.headings img{
-  width: 50vw;
-  /* padding: 30vw; */
-  text-align: center;
-}
-
 .subtext{
   text-align: center;
   font-family: serif;
@@ -36,6 +30,12 @@ body{
   margin-left: 180px;
   margin-right: 180px;
   font-size: 30px;
+}
+
+.subtext img{
+  width: 30vw;
+  /* padding: 30vw; */
+  text-align: center;
 }
 
 .navigation{
