--- a/weeklies/style.css
+++ b/weeklies/style.css
@@ -1,4 +1,11 @@
-
+.Title{
+  text-align:center;
+  font-family: Helvetica;
+  font-size: 50px;
+  margin-top: 100px;
+  color: orange;
+  margin-bottom: 8vw;
+}
 
 .title-style{
   margin: 50px;
@@ -8,7 +15,7 @@
   font-family: Georgia, serif;
   font-style: italic;
   font-style: bold;
-  color: #0;
+  color: black;
 }
 
 h1{
@@ -41,10 +48,10 @@ p {
 
 h3{
   margin: 100 50px 100px 50px;
-  padding: 100px;
+  padding: 40px;
   text-align: center;
   font-size: 300%;
   font-family: Georgia, serif;
   font-style: italic;
-  color: #0;
+  color: black;
 }
