--- a/application/aesthetic.css
+++ b/application/aesthetic.css
@@ -5,14 +5,14 @@ body{
 
 .plzWork{
   width: 500px;
-  height: 2536px;
+  height: 2586px;
   position: absolute;
 }
 
 .screen{
   background-color: #FFFBF7;
   width: 375px;
-  height: 2436px;
+  height: 2486px;
   margin-top: 50px;
   margin-left: 50px;
   position: relative;
@@ -141,4 +141,40 @@ body{
   padding-top: 30px;
   top: 2200px;
   left: -395px;
+}
+
+.topBlack{
+  position: fixed;
+  background-color: black;
+  top: 0px;
+  left: 50px;
+  width: 375px;
+  height: 50px;
+}
+
+.bottomBlack{
+  position: fixed;
+  background-color: black;
+  top: 862px;
+  left: 50px;
+  width: 375px;
+  height: 50px;
+}
+
+.leftBlack{
+  position: fixed;
+  background-color: black;
+  top: 0px;
+  left: 0px;
+  width: 50px;
+  height: 2486px;
+}
+
+.rightBlack{
+  position: fixed;
+  background-color: black;
+  top: 0px;
+  left: 425px;
+  width: 500px;
+  height: 2486px;
 }
