--- a/application/aesthetic.css
+++ b/application/aesthetic.css
@@ -1,42 +1,63 @@
 body{
   background-color: black;
   margin: 0 auto;
+  width: 500px;
+  height: 2866px;
 }
 
 .plzWork{
   width: 500px;
-  height: 2586px;
+  height: 2866px;
   position: absolute;
 }
 
 .screen{
   background-color: #FFFBF7;
   width: 375px;
-  height: 2486px;
-  margin-top: 50px;
-  margin-left: 50px;
+  height: 2766px;
+  /* margin-top: 50px;
+  margin-left: 50px; */
   position: relative;
+  overflow: auto;
 }
 
 .header{
-  color: white;
+  background-color: white;
+  top: 50px;
+  /* left: 50px; */
   width: 375px;
   height: 102px;
   position: fixed;
   z-index: 3;
+  text-align: center;
+  box-shadow: 1px 1px 5px #8888;
 }
 
 .header img{
   padding-top: 30px;
-  padding-left: 100px;
+  /* padding-left: 100px; */
   text-align: center;
   width: 175px;
 }
 
+div.profileToggle{
+  width: 375px;
+  position: fixed;
+  z-index: 3;
+  text-align: center;
+  box-shadow: 1px 1px 5px #8888;
+  top: 152px;
+}
+
+.profile{
+
+}
+
 .headerShadow{
   color: #707070;
+  text-align: center;
   top: 44px;
-  left: 41px;
+  /* left: 41px; */
   width: 375px;
   height: 102px;
   position: fixed;
@@ -46,11 +67,12 @@ body{
 .baseRectangle{
   background-color: white;
   top: 760px;
-  left: 50px;
+  /* left: 50px; */
   width: 375px;
   height: 102px;
   position: fixed;
   z-index: 3;
+  text-align: center;
 }
 
 .buttonsAtBase img{
@@ -66,105 +88,124 @@ body{
   position: relative;
 }
 
-.one{
-  top: 130px;
-  left: 40px;
-  position: absolute;
-}
+div.seen{
+    position: relative;
+    top: 150px;
+    left: 40px;
+    width: 335px;
+    padding-top: 10px;
+    /* padding-bottom: 30px; */
+    /* height: 200px; */
+    overflow: auto;
+  }
 
 .two{
   /* text-align: center; */
-  position: absolute;
+  position: relative;
   padding-top: 30px;
+  /* padding-bottom: 30px; */
   padding-left: 80px;
-  top: 310px;
+  top: 140px;
 }
 
-.three{
-  position: absolute;
+div.three{
+  position: relative;
   padding-top: 30px;
-  top: 520px;
-  left: -395px;
+  top: 130px;
+  width: 335px;
+  overflow: auto;
+  /* left: -395px; */
+
 }
 
 .four{
   /* text-align: center; */
-  position: absolute;
+  position: relative;
   padding-top: 30px;
   padding-left: 80px;
-  top: 730px;
+  top: 130px;
 }
 
-.five{
-  top: 940px;
+div.five{
+  top: 130px;
   left: 40px;
   padding-top: 30px;
-  position: absolute;
+  position: relative;
+  width: 335px;
+  overflow: auto;
 }
 
 .six{
   /* text-align: center; */
-  position: absolute;
+  position: relative;
   padding-top: 30px;
   padding-left: 80px;
-  top: 1150px;
+  top: 130px;
 }
 
-.seven{
-  position: absolute;
+div.seven{
+  position: relative;
   padding-top: 30px;
-  top: 1360px;
-  left: -395px;
+  top: 130px;
+  /* left: -395px; */
+  width: 335px;
+  overflow: auto;
 }
 
 .eight{
   /* text-align: center; */
-  position: absolute;
+  position: relative;
   padding-top: 30px;
   padding-left: 80px;
-  top: 1570px;
+  top: 130px;
 }
 
-.nine{
-  top: 1780px;
+div.nine{
+  top: 130px;
   left: 40px;
   padding-top: 30px;
-  position: absolute;
+  position: relative;
+  width: 335px;
+  overflow: auto;
 }
 
 .ten{
   /* text-align: center; */
-  position: absolute;
+  position: relative;
   padding-top: 30px;
   padding-left: 80px;
-  top: 1990px;
+  top: 130px;
 }
 
-.eleven{
-  position: absolute;
+div.eleven{
+  position: relative;
   padding-top: 30px;
-  top: 2200px;
-  left: -395px;
+  top: 130px;
+  /* left: -395px; */
+  width: 335px;
+  overflow: auto;
 }
 
 .topBlack{
   position: fixed;
   background-color: black;
   top: 0px;
-  left: 50px;
+  /* left: 50px; */
   width: 375px;
   height: 50px;
   z-index: 2;
+  text-align: center;
 }
 
 .bottomBlack{
   position: fixed;
   background-color: black;
   top: 862px;
-  left: 50px;
+  /* left: 50px; */
   width: 375px;
   height: 200px;
   z-index: 2;
+  text-align: center;
 }
 
 .leftBlack{
